# justc

./: .clang-format  CMakeLists.txt  text.txt
other/: sort.c  utils.c
src/: main.c
